--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "js-base64": "^3.6.0",
     "vue": "^3.0.0-0",
+    "vue-i18n": "^9.0.0-beta.6",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
