--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "js-base64": "^3.6.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "vue": "^3.0.0-0",
     "vue-i18n": "^9.0.0-beta.6",
     "vue-router": "^4.0.0-0",
